temp changes by me - next code on MAC after Fajar innShaaAllah

--- a/src/app/components/users/student/liveclass/liveclass.component.html
+++ b/src/app/components/users/student/liveclass/liveclass.component.html
@@ -11,10 +11,11 @@
         Send Message
       </button>
     </div> -->
+    <!-- (click)="joinClass(); initConnection(approvedRequests[0][0])" -->
     <div class="col-2">
       <button
         class="btn btn-outline-primary"
-        (click)="joinClass(); initConnection(approvedRequests[0][0])"
+        (click)="joinClass(); initConnection();"
       >
         Join Class
       </button>
