--- a/src/app/components/users/student/classrooms/classrooms.component.html
+++ b/src/app/components/users/student/classrooms/classrooms.component.html
@@ -27,14 +27,14 @@
         <div class="card text-white bg-dark">
           <div class="card-header h4 ">
             {{ classroom.id }}
-            <button
+            <!-- <button
               class="btn btn-sm btn-warning  float-right ml-2"
               popover="Announcement"
               triggers="mouseenter:mouseleave"
               (click)="addAnnouncement()"
             >
               <span><i class="fa fa-bullhorn"></i> </span>
-            </button>
+            </button> -->
           </div>
           <div class="card-body">
             <div>
