--- a/src/app/components/users/teacher/course/assignments/assignments.component.html
+++ b/src/app/components/users/teacher/course/assignments/assignments.component.html
@@ -209,6 +209,7 @@
             <thead>
               <tr>
                 <!-- <th>Student Name</th> -->
+                <th>No</th>
                 <th>Title</th>
                 <th>Due Date</th>
                 <th>Posted On</th>
@@ -219,8 +220,8 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let assignment of assignments">
-                <!-- <td>{{}}</td> -->
+              <tr *ngFor="let assignment of assignments; index as i">
+                <td>{{i + 1}}</td>
                 <td>
                   {{
                     assignment.data.title ? assignment.data.title : 'No Title'
@@ -241,6 +242,18 @@
                   <div class="pl-2 pr-2 text-center">
                     <button
                       class="btn p-0"
+                      popover="View"
+                      triggers="mouseenter:mouseleave"
+                      (click)="viewDetails(assignment)"
+                    >
+                        <span>
+                          <i class="text-info fa fa-eye "> </i>
+                        </span>
+                    </button>
+                    
+                    <button
+                    *ngIf="assignment.data.filePath"
+                      class="btn p-0"
                       popover="Download"
                       triggers="mouseenter:mouseleave"
                     >
@@ -249,6 +262,15 @@
                           <i class="text-success fa fa-download"> </i>
                         </span>
                       </a>
+                    </button>
+                    <button
+                      class="btn p-0"
+                      popover="Download"
+                      triggers="mouseenter:mouseleave"
+                      (click)="deleteAssignment(assignment)"
+                    >   <span>
+                          <i class="text-danger fa fa-trash"> </i>
+                        </span>
                     </button>
                   </div>
                 </td>
