--- a/src/app/components/users/student/course/assignments/assignments.component.html
+++ b/src/app/components/users/student/course/assignments/assignments.component.html
@@ -36,7 +36,7 @@
     </div>
   </div>
 
-  <div>
+  <div *ngIf="assignments">
     <table
       class="table table-striped table-hover table-responsive-sm table-responsive-md table-responsive-lg"
     >
@@ -57,7 +57,7 @@
         <tr *ngFor="let assignment of assignments; index as i">
           <td>{{ i + 1 }}</td>
           <td>
-            {{ assignment.data.title ? assignment.data.title : "No Title" }}
+            {{ assignment.data.title ? assignment.data.title : 'No Title' }}
           </td>
           <td>{{ assignment.data.createdOn.toDate() | date }}</td>
           <td>
@@ -71,7 +71,8 @@
           <td>
             <div class="pl-2 pr-2 text-center">
               <button
-                class="btn p-0"
+                *ngIf="assignment.data.assignment"
+                class="btn p-1"
                 popover="View"
                 triggers="mouseenter:mouseleave"
                 (click)="viewDetails(assignment)"
@@ -80,10 +81,25 @@
                   <i class="text-info fa fa-eye "> </i>
                 </span>
               </button>
-
+              <button class="btn p-1">
+                <a href="javascript:void()" (click)="fileInput.click()">
+                  <span
+                    popover="Submit Assignment"
+                    triggers="mouseenter:mouseleave"
+                  >
+                    <i class="text-warning fa fa-upload"> </i>
+                  </span>
+                </a>
+                <input
+                  type="file"
+                  hidden
+                  #fileInput
+                  (change)="handler($event)"
+                />
+              </button>
               <!-- *ngIf="assignment.data.filePath" -->
               <button
-                class="btn p-0"
+                class="btn p-1"
                 popover="Download"
                 triggers="mouseenter:mouseleave"
               >
